--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ cursor: pointer;
   overflow-x: hidden;
   transition: all 0.5s ease-in-out;
   z-index: 10;
-  box-shadow: 0px 0px 19px 0px grey;
+
 
 
 }
@@ -157,11 +157,25 @@ cursor: pointer;
   overflow-x: hidden;
   transition: all 0.5s ease-in-out;
   z-index: 10;
-  box-shadow: 0px 0px 19px 0px grey;
+
 
 
 }
+.sidebar-mini{
+ 
+  position: fixed;
 
+  left: 15.9rem;
+  background-color: #F4F5FA;
+  min-width: 250px;
+  height: 100%;
+  overflow-x: hidden;
+  transition: all 0.5s ease-in-out;
+  z-index: 0;
+
+
+
+}
 
 
 .head h3{
@@ -201,6 +215,11 @@ cursor: pointer;
 .nav-lists{
 
 margin-top:15%;
+}
+
+.nav-lists-min{
+  margin-top:21%;
+  border: 2px solid;
 }
 
 .nav_items{
@@ -444,6 +463,7 @@ display: none;
     opacity: 0.5;
     z-index: -1;
     overflow-x: hidden;
+   
 }
 
 
@@ -460,6 +480,7 @@ display: none;
     justify-content: end;
     align-items: center;
     z-index: 5;
+    box-shadow: 0px 0px 19px 0px grey
 }
 /* Top navBar End */
 
@@ -1919,11 +1940,11 @@ font-size: 20px;
   left: 0%;
 }
 
-/* .btn-success{
-background-color: #001d74db !important;
-border: none !important;
+.btn-success{
+background-color: #303f9f !important;
 
-} */
+
+}
 
 .name-t p{
   margin: 0% 0% 1% 0%;
@@ -2007,10 +2028,7 @@ z-index: 0;
   margin-bottom: 0% !important;
 }
 
-.btn-success{
-  margin-bottom: 0px !important;
-  
-}
+
 
 
 .nav_items .submenu {
@@ -2036,4 +2054,35 @@ z-index: 0;
 
 .charts .chart {
   padding: 5px 20px;
+}
+.top_nav_btn {
+  display: flex;
+  justify-content: inherit;
+  width: 100%;
+  gap: 20px;
+  padding-top: 15px;
+  padding-right: 2rem;
+}
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
