--- a/src/component/chart/Chart.css
+++ b/src/component/chart/Chart.css
@@ -4,6 +4,7 @@
     box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
     padding: 10px;
     color: gray;
+    background-color: #fff;
   }
   
   .chart .title {
@@ -16,5 +17,5 @@
   .charts{
     display: flex;
     gap: 20px;
-    padding: 20px;
+    padding: 20px 0px 20px 0px;
   }
