--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,25 @@ body {
   background-color: #eaedf7;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Roboto Flex', sans-serif;
   font-weight: 200;
 }
 
-a{ color: #5da004; text-decoration: none;}
-a:hover{ color: orange; text-decoration: none;}
+a {
+  color: #5da004;
+  text-decoration: none;
+}
+
+a:hover {
+  color: orange;
+  text-decoration: none;
+}
 
 .sidebar {
   background-color: #172b4d;
@@ -25,9 +37,9 @@ a:hover{ color: orange; text-decoration: none;}
 }
 
 svg.nav_icons {
-color: #fff;
-font-size: .9rem;
-margin-right: 6%;
+  color: #fff;
+  font-size: 0.9rem;
+  margin-right: 6%;
 }
 
 ul {
@@ -128,131 +140,130 @@ ul {
 }
 
 .page-header {
-display: flex;
-align-items: center;
-justify-content: space-between;
-margin: 1.8rem 0;
-border-radius: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1.8rem 0;
+  border-radius: 7px;
 }
 
 .main-content-title {
-color: #170c6b;
-font-weight: 500;
-font-size: 1.8rem;
-line-height: 1;
-margin-bottom: 12px;
+  color: #170c6b;
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 1;
+  margin-bottom: 12px;
 }
 
 .page-header .breadcrumb {
-background: none;
-padding: 0;
-margin-bottom: 0;
+  background: none;
+  padding: 0;
+  margin-bottom: 0;
 }
 
 .page-header .breadcrumb-item a {
-color: #8f9cc0;
+  color: #8f9cc0;
 }
 
 .d-flex {
-display: flex !important;
+  display: flex !important;
 }
 
 .justify-content-center {
-justify-content: center !important;
+  justify-content: center !important;
 }
 
 .justify-content-end {
-justify-content: flex-end !important;
+  justify-content: flex-end !important;
 }
 
-
 .ledger-list a {
-display: block;
-color: #172b4d;
-padding: 3px 10px;
+  display: block;
+  color: #172b4d;
+  padding: 3px 10px;
 }
 
 .ledger-list a:hover {
-background-color: #172b4d;
-color: #FFF;
-text-decoration: none;
+  background-color: #172b4d;
+  color: #fff;
+  text-decoration: none;
 }
 
 .ledger-list a.active {
-background-color: #172b4d;
-color: #FFF;
+  background-color: #172b4d;
+  color: #fff;
 }
 
 .form-inline label {
-margin-right: 15px;
+  margin-right: 15px;
 }
 
 .form-inline .form-group {
-vertical-align:bottom;
+  vertical-align: bottom;
 }
 
 .main-footer {
-background-color: #ffffff;
-margin-top: 0;
-padding: 15px;
-position: relative;
-bottom: 0;
-display: block;
-margin-top: auto;
+  background-color: #ffffff;
+  margin-top: 0;
+  padding: 15px;
+  position: relative;
+  bottom: 0;
+  display: block;
+  margin-top: auto;
 }
 
 .form-control {
-display: block;
-width: 100%;
-height: calc(1.5em + 0.75rem + 2px);
-padding: .175rem 2.25rem .175rem .75rem;
-font-size: 0.875rem;
-line-height: 1.5;
-color: #000;
-font-weight: normal;
-background-color: #ffffff;
-background-clip: padding-box;
-border: 1px solid #e8e8f7;
-border-radius: 3px;
-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-height: 38px;
-border-radius: 5px;
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.175rem 2.25rem 0.175rem 0.75rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  color: #000;
+  font-weight: normal;
+  background-color: #ffffff;
+  background-clip: padding-box;
+  border: 1px solid #e8e8f7;
+  border-radius: 3px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  height: 38px;
+  border-radius: 5px;
 }
 
 .form-control:focus {
-outline: 0;
-box-shadow: 0 0 0 0.2rem rgba(135, 96, 251, 0.25);
-border-color: #eeeef9;
-box-shadow: none;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(135, 96, 251, 0.25);
+  border-color: #eeeef9;
+  box-shadow: none;
 }
 
 .btn:focus {
-outline: 0;
-box-shadow: none;
+  outline: 0;
+  box-shadow: none;
 }
 
-
 .form-group label {
-font-size: 0.85rem;
+  font-size: 0.85rem;
+  font-weight: 500;
 }
 
 .btn-cancel {
-background-color: #8f9cc0;
-color: white;
-border-radius: 5px;
-padding: 5px 25px;
-margin-right: 5px;
-border: none;
-font-size: 0.9rem;
-min-width: 100px;
+  background-color: #8f9cc0;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 25px;
+  margin-right: 5px;
+  border: none;
+  font-size: 0.9rem;
+  min-width: 100px;
 }
 
 .input-group {
-position: relative;
-display: flex;
-flex-wrap: wrap;
-align-items: dstretch;
-width: 100%;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: dstretch;
+  width: 100%;
 }
 
 .input-group-text {
@@ -262,45 +273,53 @@ width: 100%;
 }
 
 .input-group-text {
-display: flex;
-align-items: center;
-padding: 0.375rem 0.75rem;
+  display: flex;
+  align-items: center;
+  padding: 0.375rem 0.75rem;
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
-margin-bottom: 0;
-font-size: 0.875rem;
-font-weight: 400;
-line-height: 1.5;
-color: #3c4858;
-text-align: center;
-white-space: nowrap;
-background-color: #f6f6ff;
-border: 1px solid #e8e8f7;
-border-radius: 3px;
+  margin-bottom: 0;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #3c4858;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #f6f6ff;
+  border: 1px solid #e8e8f7;
+  border-radius: 3px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
-padding-top: 0;
-padding-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.input-group > .form-control, .input-group > .form-control-plaintext, .input-group > .custom-select, .input-group > .custom-file {
-position: relative;
-flex: 1 1 auto;
-width: 1%;
-margin-bottom: 0;
+.input-group>.form-control,
+.input-group>.form-control-plaintext,
+.input-group>.custom-select,
+.input-group>.custom-file {
+  position: relative;
+  flex: 1 1 auto;
+  width: 1%;
+  margin-bottom: 0;
+  font-weight: 300;
 }
 
-.nav-tabs .nav-link{ color: #000; }
+.nav-tabs .nav-link {
+  color: #000;
+}
 
 .submenu {
-padding-left: 25px;
+  padding-left: 25px;
 }
 
-.required{ color: red; }
+.required {
+  color: red;
+}
 
-.custom-card-home{
+.custom-card-home {
   border: none;
-  background-color:unset
+  background-color: unset;
 }
 
 .loader-container {
@@ -313,8 +332,7 @@ padding-left: 25px;
   justify-content: center;
   align-items: center;
   z-index: 9999;
-  background-color: rgba(0, 0, 0, 0.5); 
-
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .loader {
@@ -327,10 +345,14 @@ padding-left: 25px;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
+  0% {
+    transform: rotate(0deg);
+  }
 
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 .not-found-container {
   display: flex;
@@ -371,9 +393,12 @@ padding-left: 25px;
 
 .PaginationContainer {
   display: flex;
-  justify-content: space-between; /* Distributes items along the main axis with space between */
-  align-items: center; /* Centers items along the cross axis */
+  justify-content: space-between;
+  /* Distributes items along the main axis with space between */
+  align-items: center;
+  /* Centers items along the cross axis */
 }
+
 .listgroup-example2 ul {
   list-style-type: none;
 }
@@ -393,19 +418,35 @@ padding-left: 25px;
   padding-left: 0;
   margin-bottom: 0;
   color: #3c4858;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   margin-top: 0;
 }
 
-ul.sub-categories{
-    padding-left: 40px;
+ul.sub-categories {
+  padding-left: 40px;
 }
 
 .btn-sm {
-  padding: .25rem .5rem;
-  font-size: 0.70rem;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.7rem;
   line-height: 1.5;
   border-radius: 3px;
   min-height: 0;
   min-width: 60px !important;
+}
+
+.alert-message {
+  color:#ff3838;
+}
+legend {
+  display: block;
+  font-size: 0.8rem;
+  line-height: inherit;
+  color: inherit;
+  white-space: normal;
+  width: auto;
+}
+
+table.item-table{
+  font-size: 0.8rem;
 }
