--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a:hover {
 }
 
 .sidebar {
-  background-color: #172b4d;
+  background-color: #05696B;
   width: 100%;
   min-height: 650px;
 }
@@ -61,7 +61,7 @@ ul {
 
 .nav_items a.menu-title:hover,
 .nav_items a.menu-title.active {
-  background-color: orange;
+  background: linear-gradient(90deg, #f86ca7, #ff7f18);
   color: #ffffff;
   border-radius: 5px;
   text-decoration: none;
@@ -77,7 +77,7 @@ ul {
 
 .nav_items p.menu-title:hover {
   cursor: pointer;
-  background-color: orange;
+  background: linear-gradient(90deg, #f86ca7, #ff7f18);
   color: #ffffff;
   padding: 10px 15px;
   border-radius: 5px;
@@ -124,7 +124,7 @@ ul {
 }
 
 .btn-default {
-  background-color: #172b4d;
+  background-color: #05696B;
   color: white;
   border-radius: 5px;
   padding: 5px 25px;
@@ -134,9 +134,10 @@ ul {
   min-width: 100px;
 }
 
+
 .btn-default2 {
-  background-color:orange;
-  color: black;
+  background:linear-gradient(90deg, #f86ca7, #ff7f18);
+  color: #fff;
   border-radius: 5px;
   padding: 5px 25px;
   margin-right: 5px;
@@ -146,13 +147,13 @@ ul {
 }
 
 .btn-default2:hover {
-  /* background-color: #172b4d; */
+  /* background:#001d23 ; */
   color: white;
 }
 
 .btn-default:hover {
-  background-color: orange;
-  color: white;
+  background: linear-gradient(90deg, #f86ca7, #ff7f18);
+  color: #fff;
 }
 
 .page-header {
@@ -164,7 +165,7 @@ ul {
 }
 
 .main-content-title {
-  color: #170c6b;
+  color: #05696B;
   font-weight: 500;
   font-size: 1.8rem;
   line-height: 1;
@@ -610,7 +611,7 @@ padding: 12px;
 
 .service-item:hover {
   color: #F6FFF2;
-  background: #172b4d !important;
+  background:#05696B  !important;
 }
 
 
@@ -660,14 +661,16 @@ padding: 12px;
   transition: background-color 0.3s ease; /* Transition for hover effect */
 }
 .bg-footer {
-  background: linear-gradient(rgba(52, 173, 84, .7), rgba(52, 173, 84, .7)), url(../src/img/footer.png) center bottom no-repeat;
-  background-size: contain;
+  background: url(../src/img/fernando-jorge-iyA6oTK6vig-unsplash.jpg) no-repeat center center;
+  background-size: cover;
 }
-.bg-primary {
+
+/* .bg-primary {
   background-color: #34AD54 !important;
-}
+} */
 .bg-secondary {
-  background-color: #f93 !important;
+  background-color: #05696B !important;
+
 }
 
 @media (min-width: 991.98px) {
@@ -678,3 +681,15 @@ padding: 12px;
   }
 }
 
+
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff !important;
+  background-color: #05696B !important;
+  border-color: #05696B !important;
+
+}
+
+.page-link {
+  color: #000 !important;
+}
